objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account_Historical_Linker__c</fullName>
        <formula>Contract__r.Payer_Account__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contract__r.Payer_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_With_Contract__c</fullName>
        <formula>Contract__r.Bill_with_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill With Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Historical_Linker__c</fullName>
        <formula>Contract__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>B{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Historical_Linker__c</fullName>
        <label>Historical Linker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Historical_Linker__c</fullName>
        <formula>Contract__r.Invoice_Contact__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Contact Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <formula>Contract__r.Invoice_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Main_Contact_Historical_Linker__c</fullName>
        <formula>Contract__r.Main_Contact__r.Historical_Linker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Contact Historical Linker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <formula>Contract__r.Main_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Contract__r.Program__r.Program_Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Contract__r.Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <formula>Contract__r.Program__r.Program_Abbreviation__c</formula>
        <label>Program Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_End_Date__c</fullName>
        <formula>Contract__r.Risk_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solomon_Product_Code__c</fullName>
        <formula>Contract__r.Program__r.Solomon_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solomon Product Code</label>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>